# hh200

./: .gitignore  AGENTS.md  CONTRIBUTING-LSP.md  DRAFT.md  LICENSE  Makefile  PROJECT_PLANNING.md  README.md  ROADMAP.md  app.db  easy.test  hh200.cabal  negative.test  package-lock.json  package.json  shell.nix
.github/: FUNDING.yml
.github/workflows/: apt-repo.yml  ci.yml
app/: Disk.hs  Main.hs  Types.hs  Vm.hs
app/Hh200/: Cli.hs  Types.hs  Vm.hs
building-blocks/agents/: CHANGELOG.md  agents.cabal  package.yaml  users-staging-sample.csv
building-blocks/agents/app/: Main.hs
building-blocks/cemerlang/: basic-get.erltuples  interpreter.erl
building-blocks/rt/src/: rt.erl
building-blocks/rt/test/: basic-get.erltuples  basic_SUITE.erl  body-json.erltuples  e2e.erltuples  new_SUITE.erl
config/: config.json
dev-server/: .gitignore  README.md  mkpdf.php  package-lock.json  package.json  populate.ts  populate_db.js  request.php  router.php  server.js  server.ts
dev-server/php/: .env.dev  composer.json
dev-server/php/src/Controller/: EchoController.php  PdfController.php
dev-server/public/: index.html
editors/emacs/: .dir-locals.el
editors/monarch/: README.md  hh200.json
editors/nvim/: README.md
editors/nvim/ftdetect/: hh200.vim
editors/nvim/ftplugin/: hh200.vim
editors/nvim/syntax/: hh200.vim
editors/vscode/: README.md  package.json
editors/vscode/syntaxes/: hh200.tmLanguage.json
editors/zsh/: README.md  hh200-highlighter.zsh
examples/: alpha.hhs  asserts_block.hhs  auth_bearer.hhs  chaining.hhs  download.hhs  draft.hhs  failure.hhs  get_json.hhs  headers.hhs  hello.hhs  load.hhs  methods.hhs  multi_line_json.hhs  post_json.hhs  public.hhs  redirection.hhs  smoke.hhs
examples/hhsm/: hello.hhsm
examples/hurl/: add_header.hurl  assert_header.hurl  content_type.hurl  cookies.hurl  multipart_form_data.hurl
fmt/: CMakeLists.txt  README.md
fmt/debian/: changelog  control
fmt/include/hhs/fmt/: rope.hpp
fmt/src/: rope.cpp
fmt/tests/: test_rope.cpp
guides/external-command/: external-command.js  guide.md
hh200/: .gitignore  CHANGELOG.md  Makefile  README.md  download.hhs  hh200.cabal  next.hhs  package.yaml  stack.yaml
hh200/app/: Main.hs
hh200/min/: 200.html
hh200/min/_app/: version.json
hh200/min/_app/immutable/chunks/: BErZOttR.js  CY8atDi1.js  D_ctm97z.js  Ds8K44ek.js  PKQ_G-ky.js  WvKCI1lq.js
hh200/min/_app/immutable/entry/: app.ChOSsMxB.js  app.DR6deHjy.js  app.s6fj213z.js  start.BxDsPHlN.js  start.C8nzyRS6.js  start.CFWqCeZg.js
hh200/min/_app/immutable/nodes/: 0.B1X9WqvJ.js  0.BNIRSXVE.js  0.Dsts7tYv.js  1.7phe-W3S.js  1.BDSPHK4R.js  1.BSrMTPq_.js  2.Bl6vpe9q.js  2.Cw-v0N37.js  (+5 more)
hh200/packets/: CMakeLists.txt  main.c
hh200/packets/web_root/: index.html
hh200/src/: L.hs  L.x  P.hs  P.y
hh200/src/Hh200/: Cli.hs  ContentType.hs  Database.hs  Etf.hs  Execution.hs  Fearless.hs  Graph.hs  Http.hs  LanguageServer.hs  RateLimiter.hs  Scanner.hs  SonOfJ.hs  TokenBucketWorkerPool.hs  Types.hs  Vm.hs
hh200/test/: BlindLsp.hs  CliSpec.hs  ContentTypeSpec.hs  DatabaseSpec.hs  E2eLspSpec.hs  ExecutionSpec.hs  GoldenCli.hs  GoldenNetw.hs  LspSpec.hs  MustacheSpec.hs  NetworkSpec.hs  RateLimiterSpec.hs  ScannerSpec.hs  Spec.hs
hh200/test/golden/: draft_net.txt  help.txt
hh200d/: README.md  hh200d.cabal  package.yaml  stack.yaml
hh200d/app/: Main.hs
hh200d/src/: Hh200.cf
hh200d/src/Hh200/: AbsHh.hs  DocHh.txt  ErrM.hs  Formatter.hs  LexHh.x  Makefile  ParHh.y  PrintHh.hs  SkelHh.hs  TestHh.hs
laravel-dev-server/: README.md  composer.json
laravel-dev-server/app/Http/Controllers/: ApiController.php
laravel-dev-server/routes/: api.php
laravel-dev-server/tests/Feature/: ApiTest.php
libbpf-tc/: README.md
libbpf-tc/examples/c/: CMakeLists.txt  Makefile  xmake.lua
libbpf-tc/vmlinux.h/.github/workflows/: vmlinux.h.yml
libbpf-tc/vmlinux.h/include/arm/: vmlinux_6.18.h
libbpf-tc/vmlinux.h/include/loongarch64/: vmlinux_6.18.h
libbpf-tc/vmlinux.h/include/powerpc/: vmlinux_6.18.h
libbpf-tc/vmlinux.h/include/riscv64/: vmlinux.h  vmlinux_6.18.h
libbpf-tc/vmlinux.h/include/s390x/: vmlinux_6.18.h
libbpf-tc/vmlinux.h/kconfigs/: config.common
libbpf-tc/vmlinux.h/scripts/: download-latest-linux-release.sh  gen-vmlinux-header.sh  helpers.sh  install-bpftool.sh  install-dependencies.sh  install-pahole.sh
live/: .gitignore  README.md  package.json  prisma.config.ts  svelte.config.js
live/prisma/: app.db  schema.prisma  seed.ts
live/prisma/migrations/20260711080455_init/: migration.sql
live/src/routes/: +layout.svelte  +page.js  +page.svelte
live/src/routes/runs/: +page.js  +page.svelte
lsp/: README.md  package.yaml  stack.yaml
lsp/src/: Main.hs
mcp-server/: README.md
mcp-server/src/: json_utils.sh  server.sh
mcp-server/tests/: test_json_parsing.bats
migrations/: 20260602110932-create-run.js  20260602111258-create-request.js  20260602111322-create-request-body.js  20260602111322-create-request-header.js  20260602111322-create-signal.js
models/: request.js  requestbody.js  requestheader.js  run.js  signal.js
packets/: CMakeLists.txt  README.md  test_add.cpp
php-dev-server/: README.md  composer.json  integration.test
php-dev-server/app/Http/Controllers/: AuthController.php  EchoController.php  SseController.php  WebDavController.php  XlsUploadController.php
php-dev-server/app/Http/Middleware/: LogRequestToConsole.php
php-dev-server/app/Models/: User.php  XlsFile.php
php-dev-server/bootstrap/: app.php
php-dev-server/config/: scramble.php
php-dev-server/database/migrations/: 2026_05_19_215948_create_xls_files_table.php
php-dev-server/routes/: api.php  web.php
pp200/old/: .gitignore  README.md  pyproject.toml
pp200/old/src/pp200/: __init__.py
releases/: README.md  create-deb.sh  update-repo.sh  windows
releases/docker/: Dockerfile  README.md  docker-compose.yml
rt/: README.md  rebar.config
rt/src/: rt.app.src  rt.erl
rt/test/: basic_SUITE.erl
seeders/: 20260603005745-demo-run-data.js
tdd/: CHANGELOG.md  package.yaml  tdd.cabal
tdd/src/: Lib.hs
test/: Main.hs
(+2 files in other folders)
