cabal-version:      3.4
name:               hh200
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Reza
maintainer:         rezahandzalah@gmail.com
-- copyright:
category:           Language
build-type:         Simple
-- extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable hh200
    import:           warnings
    main-is:          Main.hs
    other-modules:    Types, Vm, Disk
    -- other-extensions:
    build-depends:
        -- base ^>=4.17.2.0
        base ^>=4.19.1.0
      , bytestring
      , http-conduit
      , aeson
      , yaml
      , attoparsec
      , unordered-containers
      , optparse-applicative
      , hashtables
      , toml-parser
      , template-haskell
      , text
      -- , llvm-codegen   -- doesn't install out of the box
    hs-source-dirs:   app
    default-language: GHC2021
